fix: fixed background colors and introsection spacing

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -10,20 +10,22 @@
 
 .NameCss {
   /*
-    text-shadow: 0 0 2px rgba(255, 255, 255, 1);
+  text-shadow: 0 0 2px rgba(255, 255, 255, 1);
   */
   font-size: 2.5rem;
-  font-weight: 800;
-  letter-spacing: -0.02rem;
+  font-weight: 700;
   margin-top: 1px;
   margin-bottom: 5px;
   margin-left: 0px;
   margin-right: 0px;
+  /*
   text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
   /*
    color: #f0f0f0;
-   */
+  */
+  /*
     color: #f9f9f9;
+  */
 }
 
 .headingXl {
@@ -44,12 +46,14 @@
 }
 
 .headingAbout {
+    font-weight: 500;
   font-size: 2rem;
   margin-bottom: 0px;
   margin-top: -1.8rem;
 }
 
 .headingLg {
+    font-weight: 500;
   font-size: 2rem;
   line-height: 1.4;
   margin: 0px 0px;
@@ -67,17 +71,17 @@
 }
 
 .borderCircle {
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 1);
   border-radius: 8px;
   margin: 0px 0px;
 }
 
 .quote {
   font-style: italic; 
-  font-size: 0.85rem; 
-  color: #ccc; 
-  padding-top: 10px;
-  margin-bottom: -5px;
+  font-weight: 400;
+  font-size: 0.82rem; 
+  color: #333; 
+  padding-top: 6px;
+  margin-bottom: -6px;
   text-align: center;
 }
 
@@ -115,9 +119,7 @@
   */
   background-color: #fbf8fd; 
   border-radius: 8px;
-  /*
-  box-shadow: 0px 0px 12px rgba(255, 255, 255, 1);
-  */
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
 }
 
 .introSectionAllPosts {
@@ -135,6 +137,7 @@
   font-size: 1.4rem;
   line-height: 1.2;
   text-align: justify;
+  text-justify: inter-word;
 }
 
 .socialLinks {
@@ -368,17 +371,19 @@
   }
   .NameCss {
     font-size: 2.5rem;
-    font-weight: 800;
+    font-weight: 600;
     letter-spacing: -0.02rem;
     margin-top: 15px;
     margin-bottom: 19px;
     margin-left: 0px;
     margin-right: 0px;
+    /*
   text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
-  /*
    color: #f0f0f0;
    */
+    /*
     color: #f9f9f9;
+    */
   }
   .showlinksBorderContainer {
     display: block;
@@ -468,13 +473,16 @@
   font-size: 1.4rem;
   line-height: 1.1;
   text-align: justify;
+  text-justify: inter-word;
 }
   .headingAbout {
+    font-weight: 500;
     font-size: 2rem;
     margin-top: -20px;
     margin-bottom: 10px;
   }
   .headingLg {
+    font-weight: 500;
     font-size: 2rem;
     line-height: 1.4;
     margin: 0px 0px;
